Fixed edge case where KisSelectionMask would not update after duplication; The canvas would get stuck w/ rendered shaded selection mask overlay and not properly respond to selection of other nodes.

BUG:430474